# hnefatafl-website

./: .gitignore  Cargo.toml  Dockerfile  README.md  install_webapp.sh
src/: main.rs
static/: README.md  hnefatafl_webapp.d.ts  hnefatafl_webapp.js  hnefatafl_webapp_bg.wasm  hnefatafl_webapp_bg.wasm.d.ts  index.html  index.js  package.json  version.txt
